Generalized fixed effect for panel data
I know I should never publish untested code but whatever…

--- a/CXXCode/CMakeLists.txt
+++ b/CXXCode/CMakeLists.txt
@@ -13,11 +13,13 @@ add_library(FastPLM
   include/FixedEffect.h
   include/PlainModel.h
   include/MAP.h
+  include/GPanelMAP.h
   include/GradientDescent.h
   include/MatrixReader.h
   src/FixedEffect.cpp
   src/PlainModel.cpp
   src/MAP.cpp
+  src/GPanelMAP.cpp
   src/GradientDescent.cpp
   src/MatrixReader.cpp
   )
