--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
+build/
+
+*.o
+*.so
+
 **/.Rproj.user/
 **/.Rhistory
 **/.RData
 **/.Ruserdata
 **/.Rbuildignore
 **/RcppExports.cpp
-
-CXXCode/build/
-
-*.o
-*.so
-.Rproj.user
