apply CrashQueue to gain 20% improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(FastPLM
   src/GPSolver.h
   src/SlowFESolver.h
   src/MatrixReader.h
+  src/CrashQueue.cpp
   src/FixedEffect.cpp
   src/PlainModel.cpp
   src/FastFESolver.cpp
