--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,12 @@ Author: Yiqing Xu, Minsheng Liu
 Maintainer: Yiqing Xu <yiqingxu@ucsd.edu>, Minsheng Liu <minsheng@ucsd.edu>
 Description: Fast solver for panel data with fixed effects.
     This package is Still at early stage of development.
+License: All Rights Reserved
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.9)
-LinkingTo: Rcpp, RcppArmadillo
+LinkingTo: Rcpp, RcppArmadillo, testthat
 SystemRequirements: C++11
 NeedsCompilation: yes
 Packaged: 2017-08-22 03:01:36 UTC; selveskii
+Suggests: testthat
