"predictFE" now produces a warning when an unknown indicator occurs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 useDynLib(fastplm, .registration = TRUE)
-exportPattern("^[[:alpha:]]+")
-importFrom(Rcpp, evalCpp)
+export(solveFE)
+export(predictFE)
+export(solveGP)
+importFrom(Rcpp)
