--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Yiqing Xu, Minsheng Liu
 Maintainer: Yiqing Xu <yiqingxu@ucsd.edu>, Minsheng Liu <lambda@liu.ms>
 Description: Fast solver for panel data with fixed effects.
     This package is Still at early stage of development.
-License: All Rights Reserved
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.9)
