Revamp R side code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,8 @@
 useDynLib(fastplm, .registration = TRUE)
-export(solveFE)
-export(predictFE)
+export(create.indicators)
+export(create.subindicators)
+export(create.complex.effect)
+export(create.fixed.effects)
+export(solve.fe.model)
+export(predict.fe.model)
 importFrom(Rcpp)
