--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,21 @@
 useDynLib(fastplm, .registration = TRUE)
-export(create.indicators)
-export(create.subindicators)
-export(create.complex.effect)
-export(create.fixed.effects)
-export(solve.fe.model)
-export(predict.fe.model)
-importFrom(Rcpp)
+importFrom(Rcpp, evalCpp)
+importFrom("stats", "na.omit", "sd", "prcomp", "pf", "pt", 
+           "pnorm", "qnorm", "quantile")
+importFrom("foreach","foreach","%dopar%")
+importFrom("doParallel","registerDoParallel")
+importFrom("parallel", "detectCores", "stopCluster", "makeCluster")
+##importFrom("lfe", "felm")
+
+##export(create.indicators)
+##export(create.subindicators)
+##export(create.complex.effect)
+##export(create.fixed.effects)
+##export(SolveFixedEffects)
+
+##export(fastplm.core)
+export(fastplm)
+S3method("fastplm", "default")
+S3method("fastplm", "formula")
+S3method("predict", "fastplm")
+S3method("summary", "fastplm")
