--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ importFrom("stats", "na.omit", "sd", "prcomp", "pf", "pt",
 importFrom("foreach","foreach","%dopar%")
 importFrom("doParallel","registerDoParallel")
 importFrom("parallel", "detectCores", "stopCluster", "makeCluster")
+importFrom("splines", "bs")
 ##importFrom("lfe", "felm")
 
 ##export(create.indicators)
