--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ importFrom("foreach","foreach","%dopar%")
 importFrom("doParallel","registerDoParallel")
 importFrom("parallel", "detectCores", "stopCluster", "makeCluster")
 importFrom("splines", "bs")
+importFrom("fastplm", "CreateFixedEffects", "ContainMultipleComponents", "CheckComponents", "SolveFixedEffects")
 ##importFrom("lfe", "felm")
 
 ##export(create.indicators)
