--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,4 @@ LinkingTo: Rcpp, RcppArmadillo, testthat
 Suggests: testthat
 SystemRequirements: C++17
 NeedsCompilation: yes
-Packaged: 2018-12-28
+Packaged: 2019-09-02 23:59:08 UTC; llc
