--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ importFrom("foreach","foreach","%dopar%")
 importFrom("doParallel","registerDoParallel")
 importFrom("parallel", "detectCores", "stopCluster", "makeCluster")
 importFrom("splines", "bs")
-##importFrom("lfe", "felm")
+importFrom("future","makeClusterPSOCK")
 
 ##export(create.indicators)
 ##export(create.subindicators)
