--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
 Package: fastplm
 Type: Package
-Title: Fast Fixed Effect Algorithm
-Version: 1.0.8
-Author: Yiqing Xu, Minsheng Liu
-Maintainer: Yiqing Xu <yiqingxu@ucsd.edu>
+Title: Fast Fixed Effects Algorithm
+Version: 1.0.9
+Author: Minsheng Liu，Licheng Liu, Ziyi Liu, Yiqing Xu
+Maintainer: Yiqing Xu <yiqingxu@stanford.edu>
 Description: Fast solver for panel data with fixed effects.
-    This package is Still at early stage of development.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.9), doParallel (>= 1.0.10), foreach (>= 1.4.3)
-LinkingTo: Rcpp, RcppArmadillo, testthat, future
+Imports: Rcpp (>= 0.12.9), doParallel (>= 1.0.10), foreach (>= 1.4.3), future (>= 1.25.0) 
+LinkingTo: Rcpp, RcppArmadillo, testthat
 Suggests: testthat
 SystemRequirements: C++17
-NeedsCompilation: yes
-Packaged: 2019-09-02 23:59:08 UTC; llc
